# shageki

./: CMakeLists.txt  Makefile  README.md
lib/obj_loader/: tiny_obj_loader.h
shaders/: shader.frag  shader.vert
src/: app.c  app.h  main.c  vulkan.c  vulkan.h  vulkan_context.h
src/core/: defines.h  error.h  fs.c  fs.h
src/renderer/: buffer.c  buffer.h  core.c  frame_data.c  material.c  material.h  mesh.c  mesh.h  renderer.c  renderer.h  swapchain.c  vk_defines.h
src/renderer/vulkan/: vk_device.c  vk_swapchain.c  vk_types.h  vulkan_backend.h  vulkan_renderer.c
